--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name", email = "your@email.com"},
 ]
 dependencies = [
-    "google-adk~=1.8.0",
+    "google-adk~=1.14.1",
     "opentelemetry-exporter-gcp-trace~=1.9.0",
     "google-cloud-logging~=3.11.4",
     "google-cloud-aiplatform[evaluation]~=1.106.0",
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn~=0.34.0",
     "psycopg2-binary>=2.9.10",
     "markdownify>=1.2.0",
+    "google-cloud-firestore>=2.18.0",
 ]
 
 requires-python = ">=3.10,<3.14"
